just need to add stats and student apply job page

--- a/templates/adminhome.html
+++ b/templates/adminhome.html
@@ -14,32 +14,209 @@
 
 
   <style>
+   
 
-        .container{
-                display: flex;
-	        align-items: center;
-		justify-content:center;
-		margin-top:5%;
-        }
-	.card {
-		width: 400px;
-		display: inline-flex;
-	        align-items: center;
-		margin: 1rem;
-		border-radius: 4px;
-		box-shadow: 0 -1px 1px 0 rgba(0,0,0,.05), 0 1px 2px 0 rgba(0,0,0,.2);
-
-		&-img {
-			position: relative;
-			height: 224px;
-			width: 100%;
-			background-color: #fff;
-			transition: opacity .2s ease;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-size: cover;
-               }
-
+         .container1{
+                margin-top:10rem;
+                display:flex;
+                justify-content:center;
+                align-items:center;
+                position:relative;
+                flex-wrap:wrap;
+          }
+          
+          
+          .card1{
+                position:relative;
+                max-width:300px;
+                height:215px;
+                background:#fff;
+                margin:30px 30px 30px 0;
+                padding:20px 15px 20px 15px;
+                display:flex;
+                flex-direction:column;
+                box-shadow: 0 5px 20px rgba(0,0,0,0,5);
+                transition:0.3s ease-in-out;
+            
+          }
+          
+          .container1 .card1:hover{
+               height:420px;
+               transform: scale(1.2);
+               display:block;
+          }
+          
+          
+          .container1 .card1 .imgBx{
+                position:relative;
+                padding:20px 15px 20px 15px;
+                width:260px;
+                height:260px;
+                top:-60px;
+                left:20px;
+                z-index:1;
+                box-shadow:0 5px 20px rgba(0,0,0,0.2);
+          }
+          
+          
+          .container1 .card1 .imgBx img{
+                max-width:100%;
+                border-radius:4px;
+                transform: scale(1.2);
+          }
+          
+          
+          .container1 .card1 .content{
+                position:relative;
+                margin-top: -140px;
+                padding: 10px 15px;
+                text-align: center;
+                color:#111;
+                visibility: hidden;
+                opacity:0;
+                transition:0.3s ease-in-out;
+          }
+          
+          .container1 .card1:hover .content{
+                visibility:visible;
+                opacity:1;
+                margin-top:-40px;
+                transition-delay:0.3s;
+                
+          }
+          
+          
+          
+          .card2{
+                position:relative;
+                max-width:300px;
+                height:215px;
+                background:#fff;
+                margin:30px 30px 30px 0;
+                padding:20px 15px 20px 15px;
+                display:flex;
+                flex-direction:column;
+                box-shadow: 0 5px 20px rgba(0,0,0,0,5);
+                transition:0.3s ease-in-out;
+            
+          }
+          
+          .container1 .card2:hover{
+               height:420px;
+               transform: scale(1.2);
+               display:block;
+          }
+          
+          
+          .container1 .card2 .imgBx{
+                position:relative;
+                padding:20px 15px 20px 15px;
+                width:260px;
+                height:260px;
+                top:-60px;
+                left:20px;
+                z-index:1;
+                overflow:none;
+                box-shadow:0 5px 20px rgba(0,0,0,0.2);
+          }
+          
+          
+          .container1 .card2 .imgBx img{
+                max-width:100%;
+                border-radius:4px;
+                transform: scale(1.2);
+          }
+          
+          
+          .container1 .card2 .content{
+                position:relative;
+                margin-top: -140px;
+                padding: 10px 15px;
+                text-align: center;
+                color:#111;
+                visibility: hidden;
+                opacity:0;
+                transition:0.3s ease-in-out;
+          }
+          
+          .container1 .card2:hover .content{
+                visibility:visible;
+                opacity:1;
+                margin-top:-40px;
+                transition-delay:0.3s;
+                
+          }
+          
+           
+          
+          .card3{
+                position:relative;
+                max-width:300px;
+                height:215px;
+                background:#fff;
+                margin:30px 30px 30px 0;
+                padding:20px 15px 20px 15px;
+                display:flex;
+                flex-direction:column;
+                box-shadow: 0 5px 20px rgba(0,0,0,0,5);
+                transition:0.3s ease-in-out;
+            
+          }
+          
+          .container1 .card3:hover{
+               height:420px;
+               transform: scale(1.2);
+           
+          }
+          
+          
+          .container1 .card3 .imgBx{
+                position:relative;
+                width:260px;
+                height:260px;
+                top:-60px;
+                left:20px;
+                z-index:1;
+                box-shadow:0 5px 20px rgba(0,0,0,0.2);
+                overflow:none;
+          }
+          
+          
+          .container1 .card3 .imgBx img{
+                max-width:100%;
+                border-radius:4px;
+                transform: scale(1.2);
+          }
+          
+          
+          .container1 .card3 .content{
+                position:relative;
+                margin-top: -140px;
+                padding: 10px 15px;
+                text-align: center;
+                color:#111;
+                visibility: hidden;
+                opacity:0;
+                transition:0.3s ease-in-out;
+          }
+          
+          .container1 .card3:hover .content{
+                visibility:visible;
+                opacity:1;
+                margin-top:-40px;
+                transition-delay:0.3s;
+                
+          }
+               
+               
+               
+               
+               
+               
+               
+               
+               
+              
     </style>
 
 
@@ -47,47 +224,43 @@
 
 <body>
 
-   <div class="container">
-     <div class="card">
-	  <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-	    <img src="https://img.icons8.com/fluency/344/data-configuration.png" class="img-fluid"/>
-	    <a href="#!">
-	      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-	    </a>
-	  </div>
-	  <div class="card-body">
-	    <h5 class="card-title">View Database</h5>
-	    <p class="card-text">You can view/edit the Student database</p>
-	    <a href="/db/" class="btn btn-primary">Button</a>
-	  </div>
-     </div>
 
-     <div class="card">
-	  <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-	    <img src="https://img.icons8.com/color-glass/344/mailbox-closed-flag-up.png" class="img-fluid"/>
-	    <a href="#!">
-	      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-	    </a>
-	  </div>
-	  <div class="card-body">
-	    <h5 class="card-title">Post Job</h5>
+  <div class="container1">
+  
+     <div class="card1">
+     
+        <div class="imgBx">
+             <img src="https://img.icons8.com/fluency/344/data-configuration.png" class="img-fluid"/>
+        </div>
+        <div class="content">
+           <h5 class="card-title">View Database</h5>
+           <p class="card-text">You can view/edit the Student database</p>
+	    <a href="/db/" class="btn btn-primary">Button</a>
+        </div>
+     </div>
+   
+     <div class="card2">
+ 
+        <div class="imgBx">
+             <img src="https://img.icons8.com/color-glass/344/mailbox-closed-flag-up.png" class="img-fluid"/>
+        </div>
+        <div class="content">
+           <h5 class="card-title">Post Job</h5>
 	    <p class="card-text">You can post a new job/internship here.</p>
 	    <a href="/add_job" class="btn btn-primary">Button</a>
-	  </div>
+        </div>
      </div>
-
-    <div class="card">
-	  <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-	    <img src="https://img.icons8.com/external-itim2101-flat-itim2101/344/external-statistics-network-technology-itim2101-flat-itim2101.png" class="img-fluid"/>
-	    <a href="#!">
-	      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-	    </a>
-	  </div>
-	  <div class="card-body">
-	    <h5 class="card-title">View Stats</h5>
+   
+     <div class="card3">
+     
+        <div class="imgBx">
+             <img src="https://img.icons8.com/external-itim2101-flat-itim2101/344/external-statistics-network-technology-itim2101-flat-itim2101.png" class="img-fluid"/>
+        </div>
+        <div class="content">
+           <h5 class="card-title">View Stats</h5>
 	    <p class="card-text">Views statistics on current placement scenario.</p>
 	    <a href="#!" class="btn btn-primary">Button</a>
-	  </div>
+        </div>
      </div>
   </div>
 
