--- a/templates/intern.html
+++ b/templates/intern.html
@@ -8,6 +8,16 @@
         margin-left: 50px;
         text-decoration: none;
     }
+    
+    
+    
+    .form-body{
+        display:flex;
+        margin-top:10em;
+        align-items:center;
+        justify-content:center;
+    }
+
 
     .book {
         padding: 20px;
