--- a/templates/job.html
+++ b/templates/job.html
@@ -73,6 +73,11 @@
            -webkit-font-smoothing: antialiased;
         }
         
+        .back{
+           height:45px;
+           float:right;
+        
+        }
 
 
 </style>
@@ -126,30 +131,54 @@
                             
              <div class="form-group" >
               
-                <label class="container">BTech-CS
-		  <input type="checkbox" name="Eligibility" value="Btech-CS">
+                <label class="container">Bachelor of Technology, Mechanical Engineering
+		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Mechanical Engineering">
 		  <span class="checkmark"></span>
 		</label>
-		<label class="container">BTech-Civil
-		  <input type="checkbox" name="Eligibility" value="Btech-Civil">
+		<label class="container">Bachelor of Technology, Chemical Engineering
+		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Chemical Engineering">
 		  <span class="checkmark"></span>
 		</label>
-		<label class="container">BTech-Mech
-		  <input type="checkbox" name="Eligibility" value="Btech-Mech">
+		<label class="container">Bachelor of Technology, Computer Science Engineering
+		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Computer Science Engineering">
 		  <span class="checkmark"></span>
 		</label>
-		<label class="container">BTech-ECE
-		  <input type="checkbox" name="Eligibility" value="Btech-ECE">
+		<label class="container">Bachelor of Technology, Electrical Engineering
+		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Electrical Engineering">
 		  <span class="checkmark"></span>
 		</label>
-		<label class="container">MTech-CS
-		  <input type="checkbox" name="Eligibility" value="Mtech-CS">
+		<label class="container">Bachelor of Technology, Electronics and Communication Engineering
+		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Electronics and Communication Engineering"">
 		  <span class="checkmark"></span>
 		</label>
-		<label class="container">MCA
-		  <input type="checkbox" name="Eligibility" value="MCA">
+		<label class="container">Master in Computer Applications
+		  <input type="checkbox" name="Eligibility" value="Master in Computer Applications">
 		  <span class="checkmark"></span>
 		</label>
+		<label class="container">Master of Technology, Mechanical Engineering
+		  <input type="checkbox" name="Eligibility" value="Master of Technology, Mechanical Engineering">
+		  <span class="checkmark"></span>
+		</label>
+		<label class="container">Master of Technology, Chemical Engineering
+		  <input type="checkbox" name="Eligibility" value="Master of Technology, Chemical Engineering">
+		  <span class="checkmark"></span>
+		</label>
+		<label class="container">Master of Technology, Computer Science Engineering
+		  <input type="checkbox" name="Eligibility" value="Master of Technology, Computer Science Engineering">
+		  <span class="checkmark"></span>
+		</label>
+		<label class="container">Master of Technology, Electrical Engineering
+		  <input type="checkbox" name="Eligibility" value="Master of Technology, Electrical Engineering">
+		  <span class="checkmark"></span>
+		</label>
+		
+		<label class="container">Master of Technology, Electronics and Communication Engineering
+		  <input type="checkbox" name="Eligibility" value="Master of Technology, Electronics and Communication Engineering">
+		  <span class="checkmark"></span>
+		</label>
+		
+		
+		
 		
               </div>
 
@@ -176,10 +205,10 @@
               </div>
                        
                  
-              <button class="btn btn-primary btn-block" style="text-align:center; margin-left:1%;width:100px; height:40px;">
+              <button class="btn btn-primary btn" style="text-align:center; margin-left:1%;width:100px; height:40px;">
                 Proceed
               </button>
-          
+              <a link href="/adminhome"><button type="button" class="back btn btn-dark">Back to Home</button></a>
            
 
 
