--- a/templates/register.html
+++ b/templates/register.html
@@ -22,22 +22,6 @@
 
 <style>
  
-     *, body {
-            font-family: 'Poppins', sans-serif;
-            font-weight: 400;
-            
-            -webkit-font-smoothing: antialiased;
-            text-rendering: optimizeLegibility;
-            -moz-osx-font-smoothing: grayscale;
-            font-size:17px;
-        }
-
-        html, body {
-            height: 100%;
-            background-color: ;
-          
-        }
-        
         .header{
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
@@ -94,7 +78,16 @@
 	
 	
 	.form-control{
-	   height:50px;
+	   height:3em;
+	   font-size:17px;
+	}
+	
+	.form-check,p{
+	   font-size:17px;
+	}
+	
+	.alert{
+	   font-size:17px;
 	}
 	
 	.btn{
