--- a/templates/base.html
+++ b/templates/base.html
@@ -8,19 +8,20 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato&family=Sora:wght@300;400&display=swap" rel="stylesheet">
  
     <style>
         
-        nav a{
-            margin:auto;
-            font-size:50px;
-        }
+ 
+        
         
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap');
 
         *, body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Lato', sans-serif;
+            font-family: 'Sora', sans-serif;
             font-weight: 400;
             -webkit-font-smoothing: antialiased;
             text-rendering: optimizeLegibility;
@@ -33,6 +34,8 @@
           
         }
         
+       
+		
         .header{
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
@@ -213,16 +216,116 @@
 	   color: #2acc80;
 	}
 	
-	.navbar-nav{
-   	
+        @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+    
+	.nav-item{
+	    font-size:20px;
+	    transition:0.5s;
+	    margin:0 2em 0 2em;
+	    
 	}
 	
-	.nav-item{
-	   font-size:20px;
-	   font-family: 'Poppins', sans-serif;
-           font-weight: bold;
-           -webkit-font-smoothing: antialiased;
-        }
+	.nav-item:hover{
+	    box-shadow: rgba(0,255,255, 255) 0px 3px 10px;
+	    border-radius:20px;
+	    color:#111;
+	    
+	}
+
+	@media (min-width: 576px) {
+	  .navbar-icon-top.navbar-expand-sm .navbar-nav .nav-link {
+	    text-align: center;
+	    display: table-cell;
+	    height: 70px;
+	    vertical-align: middle;
+	    padding-top: 0;
+	    padding-bottom: 0;
+	  }
+
+	  .navbar-icon-top.navbar-expand-sm .navbar-nav .nav-link > .fa {
+	    display: block;
+	    width: 48px;
+	    margin: 2px auto 4px auto;
+	    top: 0;
+	    line-height: 24px;
+	  }
+
+	  .navbar-icon-top.navbar-expand-sm .navbar-nav .nav-link > .fa > .badge {
+	    top: -7px;
+	  }
+	}
+
+	@media (min-width: 768px) {
+	  .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link {
+	    text-align: center;
+	    display: table-cell;
+	    height: 70px;
+	    vertical-align: middle;
+	    padding-top: 0;
+	    padding-bottom: 0;
+	  }
+
+	  .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link > .fa {
+	    display: block;
+	    width: 48px;
+	    margin: 2px auto 4px auto;
+	    top: 0;
+	    line-height: 24px;
+	  }
+
+	  .navbar-icon-top.navbar-expand-md .navbar-nav .nav-link > .fa > .badge {
+	    top: -7px;
+	  }
+	}
+
+	@media (min-width: 992px) {
+	  .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link {
+	    text-align: center;
+	    display: table-cell;
+	    height: 70px;
+	    vertical-align: middle;
+	    padding-top: 0;
+	    padding-bottom: 0;
+	  }
+
+	  .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link > .fa {
+	    display: block;
+	    width: 48px;
+	    margin: 2px auto 4px auto;
+	    top: 0;
+	    line-height: 24px;
+	  }
+
+	  .navbar-icon-top.navbar-expand-lg .navbar-nav .nav-link > .fa > .badge {
+	    top: -7px;
+	  }
+	}
+
+	@media (min-width: 1200px) {
+	  .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link {
+	    text-align: center;
+	    display: table-cell;
+	    height: 70px;
+	    vertical-align: middle;
+	    padding-top: 0;
+	    padding-bottom: 0;
+	  }
+
+	  .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link > .fa {
+	    display: block;
+	    width: 48px;
+	    margin: 2px auto 4px auto;
+	    top: 0;
+	    line-height: 24px;
+	  }
+
+	  .navbar-icon-top.navbar-expand-xl .navbar-nav .nav-link > .fa > .badge {
+	    top: -7px;
+	  }
+	}
+        
+        
+        
         
         .table{
            width:95%;
@@ -257,41 +360,59 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    
+<nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">TNP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="http://127.0.0.1:5000/logout">
-       
-        {% if session['loggedin'] %}
-              Logout
-        {% else %}
-              Login
-        {% endif %}
-        
-        
-        </a>
-      </li>
-      
-      <li class="nav-item active">
-        <a class="nav-link" href="http://127.0.0.1:5000/logoutadmin">
-        {% if session['loggedin'] %}
-              LogoutAdmin
-        {% else %}
-              LoginAdmin
-        {% endif %}
-        
-        
-        </a>
-      </li>
-      
-    </ul>
+      {% if session['username']=='M210678CA' %}
+             <li class="nav-item">
+		<a class="nav-link" href="http://127.0.0.1:5000/adminhome">
+		    Home
+		</a>
+	      </li>
+	      <li class="nav-item">
+		<a class="nav-link" href="http://127.0.0.1:5000/logoutadmin">
+		      LogoutAdmin
+		</a>
+	      </li>
+      {% elif session['loggedin']  %}
+	      <li class="nav-item">
+		<a class="nav-link" href="http://127.0.0.1:5000/home">
+		    Home
+		</a>
+	      </li>
+	      <li class="nav-item">
+		<a class="nav-link" href="http://127.0.0.1:5000/logout">
+		    Logout
+		</a>
+	      </li>
+	{% else %}
+	      <li class="nav-item">
+		<a class="nav-link" href="http://127.0.0.1:5000/login">
+		    Login
+		</a>
+	      </li>
+	      
+              <li class="nav-item">
+               <a class="nav-link" href="http://127.0.0.1:5000/loginadmin">
+		    LoginAdmin
+		</a>
+              </li>
+      {% endif %}
+          </form>
   </div>
 </nav>
+
+
+
+
+
     <hr>
     <div class="content">
         {% block content %} {% endblock %}
