--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -1,13 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+
+    <style>
+    
+        .btn{
+           display:inline-block;
+        }
+        .back{
+            float:right;
+        }
+    
+    </style>
+
+
      <div class="form-body">
         <div class="row">
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
                         <form class="was-validated" action="{{ url_for('update') }}" on method="post">
-                            <h3 class="header">Add your Details</h3>
+                            <h3 class="header">Edit your Details</h3>
                             <div class="col-md-12">
                                <input class="form-control" type="text" name="regno" placeholder="Registration Number" minlength='9' maxlength='9' value="{{details[0][0]}}" disabled>
                             </div>
@@ -86,12 +100,15 @@
 
                             <div class="form-button mt-3">
                              <button id="submit" type="submit" class="btn btn-primary">Save Changes</button>
+                             <a link href="/view/"><button type="button" class="back btn btn-dark">Back to View Profile</button></a>
                             </div>
+                            
                         </form>
                     </div>
                 </div>
             </div>
         </div>
+        
     </div>
 
 {% endblock %}
