--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,8 @@
         <td>{{ s[7] }}</td>
         <td>{{ s[8] }}</td>
         <td>{{ s[9] }}</td>
+        <td>{{ s[10] }}</td>
         <td>{{ s[11] }}</td>
-        <td>{{ s[12] }}</td>
         
         <td><a href="/my-link?{{ s[0] }}" ><button type="button" class="btn btn-danger" ">Delete</button></a></td>
         
@@ -134,6 +134,62 @@
            <a href="/delete/{{row[0]}}" ><button type="button" class="btn btn-danger" ">Delete</button>
            </a>
         </td>
+      </tr>
+    </tbody>
+  {% endfor %}
+    
+    
+    
+</table>
+
+
+<h2> Fulltime </h2>
+<table class="table table-striped table-bordered  table-hover">
+  <thead>
+    <tr>
+     <th>#</th>
+     <th>Job ID</th>
+     <th>Bond</th>
+     <th>Package</th>
+    </tr>
+  </thead>
+  
+  {% for row in fulltime %}
+    <tbody>
+      <tr>
+        <th scope="row">{{fulltime.index(row)+1}}</th>
+        <td>{{ row[0] }}</td>
+        <td>{{ row[1] }}</td>
+        <td>{{ row[2] }}</td>
+      </tr>
+    </tbody>
+  {% endfor %}
+    
+    
+    
+</table>
+
+
+<h2> Internship </h2>
+<table class="table table-striped table-bordered  table-hover">
+  <thead>
+    <tr>
+     <th>#</th>
+     <th>Job ID</th>
+     <th>Duration</th>
+     <th>Ppo</th>
+     <th>Stipend</th>
+    </tr>
+  </thead>
+  
+  {% for row in intern %}
+    <tbody>
+      <tr>
+        <th scope="row">{{intern.index(row)+1}}</th>
+        <td>{{ row[0] }}</td>
+        <td>{{ row[1] }}</td>
+        <td>{{ row[2] }}</td>
+        <td>{{ row[3] }}</td>
       </tr>
     </tbody>
   {% endfor %}
